--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ div { line-height: 1.6; }
 <p onclick="clickName()">Ấn vô đây điii</p>
 <div id="letter" class="letter">
   <h3>From: Tờ nhân</h3>
-  <p>Chúc mừng. Đây là bức thư bí mật cho An.</p>
+  <p>Hé lô cô bé cute lạnk lùnk đtđ _ Hòi Ăng</p>
 </div>
 
 <script>
@@ -68,3 +68,4 @@ function clickName() {
 
 </body>
 </html>
+
