--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@ div { line-height: 1.6; }
 <p onclick="clickName()">Ấn vô đây điii</p>
 <div id="letter" class="letter">
   <h3>From: Tờ nhân</h3>
-  <p>Hé lô cô bé cute lạnk lùnk đtđ _ Hòi Ăng</p>
+  <p>Hé lô cô bé cute lạnk lùnk đtđ _ Hòi Ăng
+    Mặc dù m không có thi kì thi sắp tới này nhưng chặng đường còn dài, chúng mình còn 1 năm nữa lận, với lại sắp tới cũng gần đến kì thi HSG tỉnh ròi, chỉ mong trong kì thi đó m có thể thực sự bùng nổ và tỏa sáng thay cho những khoảnh khắc m đã bỏ lỡ và đạt giải số thật cao nhâ. BTW cái bánh m tặng t ăn ngol lắm</p>
 </div>
 
 <script>
 function clickName() {
   let pass = prompt("Nhập mật khẩu vô nha (gợi ý là ngày tháng sinh của mình VD: 1907)");
-  if (pass === "123") {
+  if (pass === "1604") {
     document.getElementById("letter").style.display = "block";
   } else {
     alert("Sai rồi, có phải An không đấy?");
@@ -68,4 +69,5 @@ function clickName() {
 
 </body>
 </html>
+
 
