--- a/index.html
+++ b/index.html
@@ -59,15 +59,23 @@ function clickName() {
   let pass = prompt("Nhập mật khẩu vô nha (gợi ý là ngày tháng sinh của mình VD: 1907)");
   if (pass === "1604") {
     document.getElementById("letter").style.display = "block";
+    const music = document.getElementById("bgMusic");
+music.currentTime = 0;
+music.play();
   } else {
     alert("Sai rồi, có phải An không đấy?");
   }
 }
+  
 </script>
 
+<audio id="bgMusic">
+  <source src="nhac.mp3.mp3" type="audio/mpeg">
+</audio>
 
 
 </body>
 </html>
+
 
 
